Now the app is working locally

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,5 @@
-# MySQL connection URL (docker-compose uses service name `mysql` as host)
-DB_URL=mysql+pymysql://appuser:StrongPass@mysql:3306/onepiecedb
-# Where to store uploads inside the container
-UPLOAD_DIR=/app/uploads
-# FastAPI settings
-APP_TITLE=One Piece Registration (FastAPI)
-APP_DEBUG=false
+DB_URL="mssql+pyodbc://LakshmiNarayana:Lakshmi%40123456789@onepieceserver.database.windows.net:1433/luckydb?driver=ODBC+Driver+18+for+SQL+Server&Encrypt=yes&TrustServerCertificate=no"
+UPLOAD_DIR="uploads"
+APP_TITLE="One Piece Registration (FastAPI)"
+APP_DEBUG="true"
+
